--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ header-img: none
 email: acc1280955870@gmail.com	
 description: "为了更好的省锡中"
 keyword: "sxz, SXZ, ZYKJ, zykj, 省锡中, 中育科教, 中育"
-url: "https://kuzusy.github.io/SXZ-plus-plus/"
-baseurl: "SXZ-plus-plus"
+url: "https://sxz-oi.github.io/"
+baseurl: ""
 
 theme: jekyll-theme-cayman
