--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,109 @@
 # Site settings
 title: SXZ++
 SEOTitle: SXZ++ | 省锡中++
-header-img: none
-email: acc1280955870@gmail.com	
-description: "为了更好的省锡中"
+header-img: img/home-bg.jpg
+email: none
+description: "本开源项目旨在让被迫留校的锡监学子能有应该更加快乐的平板使用体验，同时帮助中育科教寻找并修复BUG"
 keyword: "sxz, SXZ, ZYKJ, zykj, 省锡中, 中育科教, 中育"
-url: "https://sxz-oi.github.io/"
-baseurl: ""
+url: "https://sxz-oi.github.io"              # your host, for absolute URL
+baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
-theme: jekyll-theme-cayman
+# Publish posts or collection documents with a future date.
+future: true
+
+# SNS settings
+# RSS: false
+# weibo_username:     huxpro
+# zhihu_username:     huxpro
+# github_username:    huxpro
+# twitter_username:   huxpro
+#facebook_username:  huxpro
+#linkedin_username:  firstname-lastname-idxxxx
+
+
+
+# Build settings
+# from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
+highlighter: rouge
+permalink: pretty
+paginate: 10
+exclude: ["less","node_modules","Gruntfile.js","package.json","README.md","README.zh.md"]
+anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
+# If you have timezone issue (e.g. #68) in China, uncomment to use this:
+#timezone: CN  
+
+
+
+# Gems
+# from PR#40, to support local preview for Jekyll 3.0
+# make sure you have this gem installed
+# `$ gem install jekyll-paginate`
+plugins: [jekyll-paginate]
+
+
+
+# Markdown settings
+# replace redcarpet to kramdown,
+# although redcarpet can auto highlight code, the lack of header-id make the catalog impossible, so I switch to kramdown
+# document: http://jekyllrb.com/docs/configuration/#kramdown
+markdown: kramdown
+kramdown:
+  input: GFM                            # use Github Flavored Markdown !important
+  syntax_highlighter_opts:
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
+      start_line: 1
+
+
+
+# Disqus settings
+# disqus_username: hux
+
+# Netease settings
+# netease_comment: false
+
+
+
+# Analytics settings
+# Baidu Analytics 
+# ba_track_id: [your track id]
+
+# Google Analytics
+# ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
+# ga_domain: huangxuan.me
+
+
+
+# Sidebar settings
+sidebar: false                          # whether or not using Sidebar.
+sidebar-about-description: "TESTESTEST"
+sidebar-avatar: https://github.com/sxz-oi.png # use absolute URL, seeing it's used in both `/` and `/about/`
+
+
+
+# Featured Tags
+featured-tags: true                     # whether or not using Feature-Tags
+featured-condition-size: 1              # A tag will be featured if the size of it is more than this condition value
+
+
+
+# Progressive Web Apps
+chrome-tab-theme-color: "#000000"
+service-worker: true
+
+
+
+# MathJax rendering for layout:page (e.g. post preview)
+page-mathjax: false
+
+
+
+# Friends
+friends: [
+    # {
+    #     title: "Su",
+    #     href: "http://su.gallery/"
+    # }
+]
